project ready all requirements v2

--- a/app/interfaces/web/static/index.html
+++ b/app/interfaces/web/static/index.html
@@ -249,7 +249,7 @@
         
         <div class="example-queries">
             <h3>Try these example queries:</h3>
-            <button class="example-btn" onclick="sendExample('What are the must-see attractions in Kyoto?')">🏯 Kyoto Attractions</button>
+            <button class="example-btn" onclick="sendExample('What are the must-see attractions in Tokyo?')">🏯 Tokyo Attractions</button>
             <button class="example-btn" onclick="sendExample('What should I pack for Tokyo in October?')">🎒 Packing Advice</button>
             <button class="example-btn" onclick="sendExample('What is the weather like in Paris?')">🌤️ Weather Query</button>
             <button class="example-btn" onclick="sendExample('Where should I go in Europe for summer vacation?')">✈️ Destination Reco</button>
